Update Adventures in Middle Earth.html
Bug fix. Non-existing attribute trying to add itself to attack rolls

--- a/Adventures in Middle Earth/Adventures in Middle Earth.html
+++ b/Adventures in Middle Earth/Adventures in Middle Earth.html
@@ -1586,44 +1586,6 @@
                     <button type="roll" name="roll_attack_dmg" style="display: none;" value="@{rollbase_dmg}"></button>
                     <button type="roll" name="roll_attack_crit" style="display: none;" value="@{rollbase_crit}"></button>
                  </fieldset>
-                <input type="hidden" class="toggleflag" name="attr_global_attack_mod_flag">
-                <div class="hidden textbox globalattack">
-                    <span class="label" data-i18n="global-attack-u">GLOBAL ATTACK MODIFIER</span>
-                    <fieldset class="repeating_tohitmod">
-                        <div class="global-mod">
-                            <input type="checkbox" name="attr_options-flag" class="options-flag" checked="checked" style="top: -15px;"><span>y</span>
-                            <input type="checkbox" name="attr_global_attack_active_flag" value="1" class="active-flag">
-                            <div class="options">
-                                <textarea type="textarea" name="attr_global_attack_rollstring" placeholder="1d4[BLESS]"></textarea>
-                            </div>
-                            <div class="display">
-                                <span class="title" name="attr_global_attack_rollstring"></span>
-                            </div>
-                        </div>
-                    </fieldset>
-                </div>
-                <input type="hidden" class="toggleflag" name="attr_global_damage_mod_flag">
-                <div class="hidden textbox globalattack">
-                    <span class="label" data-i18n="global-damage-u">GLOBAL DAMAGE MODIFIER</span>
-                    <fieldset class="repeating_damagemod">
-                        <div class="global-mod">
-                            <input type="checkbox" name="attr_options-flag" class="options-flag" checked="checked" style="top: -15px;"><span>y</span>
-                            <input type="checkbox" name="attr_global_damage_active_flag" value="1" class="active-flag">
-                            <div class="options">
-                                <textarea type="textarea" name="attr_global_damage_rollstring" placeholder="1d6[SNEAK ATTACK]"></textarea>
-                                <div class="row" style="margin-bottom: 5px;">
-                                    <span style="display: inline; margin-left: 25px;" data-i18n="type:-u">TYPE:</span>
-                                    <input type="text" name="attr_global_damage_type" value="">
-                                </div>
-                            </div>
-                            <div class="display" style="margin-bottom: 2px; width: 85%">
-                                <span class="title" name="attr_global_damage_rollstring" style="width: 110px; padding-right: 0px;"></span>
-                                <span class="subheader" name="attr_global_damage_type" style="padding-right: 0px;"></span>
-                            </div>
-                        </div>
-                    </fieldset>
-                </div>
-                <span class="label" style="margin-top: 0px; position: absolute; bottom: 0px;" data-i18n="atk-spellcasting-u">ATTACKS & ABILITIES</span>
             </div>
             <div class="equipment">
                 <div class="money">
@@ -4304,6 +4266,15 @@
                     <input class="pb_custom" type="text" style="float:right;" name="attr_pb_custom" placeholder="2d10">
                 </div>
                 <div class="row">
+                    <input type="checkbox" name="attr_global_save_mod_flag" value="1">
+                    <span data-i18n="show-global-save-field-u">SHOW GLOBAL SAVE MODIFIER FIELD</span>
+                </div>
+                <div class="row">
+                    <input type="checkbox" name="attr_global_skill_mod_flag" value="1">
+                    <span data-i18n="show-global-skill-field-u">SHOW GLOBAL SKILL MODIFIER FIELD</span>
+                </div>
+                </div>
+                <div class="row">
                     <span data-i18n="add-char-to-templates:-u">ADD CHARACTER NAME TO TEMPLATES:</span>
                     <select class="dtype" name="attr_charname_output">
                         <option value="{{charname=@{character_name}}}" data-i18n="on">On</option>
@@ -6111,44 +6082,6 @@
         });
     });
 
-    on("change:global_attack_mod", function(eventinfo) {
-        if(eventinfo.newValue) {
-            getAttrs(["global_attack_mod_field"], function(v) {
-                if(!v["global_attack_mod_field"] || v["global_attack_mod_field"] === "") {
-                    setAttrs({global_attack_mod_field: "1d4[BLESS]"})
-                }
-            });
-        };
-    });
-
-    on("change:global_damage_mod", function(eventinfo) {
-        if(eventinfo.newValue) {
-            getAttrs(["global_damage_mod_field"], function(v) {
-                if(!v["global_damage_mod_field"] || v["global_damage_mod_field"] === "") {
-                    setAttrs({global_damage_mod_field: "1d6[SNEAK ATTACK]"})
-                }
-            });
-        };
-    });
-
-    on("change:global_attack_mod_field", function(eventinfo) {
-        if(!eventinfo.newValue) {
-            setAttrs({global_attack_mod: 0});
-        };
-    });
-
-    on("change:global_damage_mod_field", function(eventinfo) {
-        var update = {};
-        if(!eventinfo.newValue) {
-            update["global_damage_mod"] = 0;
-            update["global_damage_mod_crit"] = 0;
-        }
-        else {
-            update["global_damage_mod_crit"] = "{{globaldamagecrit=[[@{global_damage_mod_field}]]}}";
-        }
-        setAttrs(update);
-    });
-
     on("change:confirm", function(eventinfo) {
         getAttrs(["drop_category"], function(v) {
             if(v["drop_category"]) {
@@ -7521,7 +7454,6 @@
             attack_attribs.push("repeating_attack_" + attackid + "_atkrange");
             attack_attribs.push("repeating_attack_" + attackid + "_itemid");
             attack_attribs.push("repeating_attack_" + attackid + "_ammo");
-            attack_attribs.push("repeating_attack_" + attackid + "_global_damage_mod_field");
         });
 
         getAttrs(attack_attribs, function(v) {
@@ -7538,7 +7470,6 @@
                 var spellattack = false;
                 var magicattackmod = 0;
                 var pbd_safe = v["pbd_safe"] ? v["pbd_safe"] : "";
-                var global_crit = v["repeating_attack_" + attackid + "_global_damage_mod_field"] && v["repeating_attack_" + attackid + "_global_damage_mod_field"] != "" ? "@{global_damage_mod_crit}" : "";
                 var hldmgcrit = v["repeating_attack_" + attackid + "_hldmg"] && v["repeating_attack_" + attackid + "_hldmg"] != "" ? v["repeating_attack_" + attackid + "_hldmg"].slice(0, 7) + "crit" + v["repeating_attack_" + attackid + "_hldmg"].slice(7) : "";
                 if(v["repeating_attack_" + attackid + "_spellid"] && v["repeating_attack_" + attackid + "_spellid"] != "") {
                     spellattack = true; 
@@ -7669,22 +7600,22 @@
                 }
                 if(v.dtype === "full") {
                     pickbase = "full";
-                    rollbase = "@{wtype}&{template:atkdmg} {{mod=@{atkbonus}}} {{rname=@{atkname}}} {{r1=[[" + r1 + "cs>@{atkcritrange}" + hbonus + "]]}} " + r2 + "cs>@{atkcritrange}" + hbonus + "]]}} @{atkflag} {{range=@{atkrange}}} @{dmgflag} {{dmg1=[[" + hdmg1 + "]]}} {{dmg1type=" + dmgtype + "}} @{dmg2flag} {{dmg2=[[" + hdmg2 + "]]}} {{dmg2type=" + dmg2type + "}} {{crit1=[[" + crit1 + "[CRIT]]]}} {{crit2=[[" + crit2 + "[CRIT]]]}} @{saveflag} {{desc=@{atk_desc}}} @{hldmg} " + hldmgcrit + " {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} @{global_attack_mod} @{global_damage_mod} @{global_damage_mod_crit} {{globaldamagetype=@{global_damage_type}}} ammo=@{ammo} @{charname_output}";
+                    rollbase = "@{wtype}&{template:atkdmg} {{mod=@{atkbonus}}} {{rname=@{atkname}}} {{r1=[[" + r1 + "cs>@{atkcritrange}" + hbonus + "]]}} " + r2 + "cs>@{atkcritrange}" + hbonus + "]]}} @{atkflag} {{range=@{atkrange}}} @{dmgflag} {{dmg1=[[" + hdmg1 + "]]}} {{dmg1type=" + dmgtype + "}} @{dmg2flag} {{dmg2=[[" + hdmg2 + "]]}} {{dmg2type=" + dmg2type + "}} {{crit1=[[" + crit1 + "[CRIT]]]}} {{crit2=[[" + crit2 + "[CRIT]]]}} @{saveflag} {{desc=@{atk_desc}}} @{hldmg} " + hldmgcrit + " {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} ammo=@{ammo} @{charname_output}";
                 }
                 else if(v["repeating_attack_" + attackid + "_atkflag"] && v["repeating_attack_" + attackid + "_atkflag"] != 0) {
                     pickbase = "pick";
-                    rollbase = "@{wtype}&{template:atk} {{mod=@{atkbonus}}} {{rname=[@{atkname}](~repeating_attack_attack_dmg)}} {{rnamec=[@{atkname}](~repeating_attack_attack_crit)}} {{r1=[[" + r1 + "cs>@{atkcritrange}" + hbonus + "]]}} " + r2 + "cs>@{atkcritrange}" + hbonus + "]]}} {{range=@{atkrange}}} {{desc=@{atk_desc}}} {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} @{global_attack_mod} ammo=@{ammo} @{charname_output}";
+                    rollbase = "@{wtype}&{template:atk} {{mod=@{atkbonus}}} {{rname=[@{atkname}](~repeating_attack_attack_dmg)}} {{rnamec=[@{atkname}](~repeating_attack_attack_crit)}} {{r1=[[" + r1 + "cs>@{atkcritrange}" + hbonus + "]]}} " + r2 + "cs>@{atkcritrange}" + hbonus + "]]}} {{range=@{atkrange}}} {{desc=@{atk_desc}}} {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} ammo=@{ammo} @{charname_output}";
                 }
                 else if(v["repeating_attack_" + attackid + "_dmgflag"] && v["repeating_attack_" + attackid + "_dmgflag"] != 0) {
                     pickbase = "dmg";
-                    rollbase = "@{wtype}&{template:dmg} {{rname=@{atkname}}} @{atkflag} {{range=@{atkrange}}} @{dmgflag} {{dmg1=[[" + hdmg1 + "]]}} {{dmg1type=" + dmgtype + "}} @{dmg2flag} {{dmg2=[[" + hdmg2 + "]]}} {{dmg2type=" + dmg2type + "}} @{saveflag} {{desc=@{atk_desc}}} @{hldmg} {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} @{global_damage_mod} {{globaldamagetype=@{global_damage_type}}} ammo=@{ammo} @{charname_output}"
+                    rollbase = "@{wtype}&{template:dmg} {{rname=@{atkname}}} @{atkflag} {{range=@{atkrange}}} @{dmgflag} {{dmg1=[[" + hdmg1 + "]]}} {{dmg1type=" + dmgtype + "}} @{dmg2flag} {{dmg2=[[" + hdmg2 + "]]}} {{dmg2type=" + dmg2type + "}} @{saveflag} {{desc=@{atk_desc}}} @{hldmg} {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} ammo=@{ammo} @{charname_output}"
                 }
                 else {
                     pickbase = "empty";
                     rollbase = "@{wtype}&{template:dmg} {{rname=@{atkname}}} @{atkflag} {{range=@{atkrange}}} @{saveflag} {{desc=@{atk_desc}}} {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} ammo=@{ammo} @{charname_output}"
                 }
-                update["repeating_attack_" + attackid + "_rollbase_dmg"] = "@{wtype}&{template:dmg} {{rname=@{atkname}}} @{atkflag} {{range=@{atkrange}}} @{dmgflag} {{dmg1=[[" + hdmg1 + "]]}} {{dmg1type=" + dmgtype + "}} @{dmg2flag} {{dmg2=[[" + hdmg2 + "]]}} {{dmg2type=" + dmg2type + "}} @{saveflag} {{desc=@{atk_desc}}} @{hldmg} {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} @{global_damage_mod} {{globaldamagetype=@{global_damage_type}}} @{charname_output}";
-                update["repeating_attack_" + attackid + "_rollbase_crit"] = "@{wtype}&{template:dmg} {{crit=1}} {{rname=@{atkname}}} @{atkflag} {{range=@{atkrange}}} @{dmgflag} {{dmg1=[[" + hdmg1 + "]]}} {{dmg1type=" + dmgtype + "}} @{dmg2flag} {{dmg2=[[" + hdmg2 + "]]}} {{dmg2type=" + dmg2type + "}} {{crit1=[[" + crit1 + "]]}} {{crit2=[[" + crit2 + "]]}} @{saveflag} {{desc=@{atk_desc}}} @{hldmg} " + hldmgcrit + " {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} @{global_damage_mod} @{global_damage_mod_crit} {{globaldamagetype=@{global_damage_type}}} @{charname_output}"
+                update["repeating_attack_" + attackid + "_rollbase_dmg"] = "@{wtype}&{template:dmg} {{rname=@{atkname}}} @{atkflag} {{range=@{atkrange}}} @{dmgflag} {{dmg1=[[" + hdmg1 + "]]}} {{dmg1type=" + dmgtype + "}} @{dmg2flag} {{dmg2=[[" + hdmg2 + "]]}} {{dmg2type=" + dmg2type + "}} @{saveflag} {{desc=@{atk_desc}}} @{hldmg} {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} @{charname_output}";
+                update["repeating_attack_" + attackid + "_rollbase_crit"] = "@{wtype}&{template:dmg} {{crit=1}} {{rname=@{atkname}}} @{atkflag} {{range=@{atkrange}}} @{dmgflag} {{dmg1=[[" + hdmg1 + "]]}} {{dmg1type=" + dmgtype + "}} @{dmg2flag} {{dmg2=[[" + hdmg2 + "]]}} {{dmg2type=" + dmg2type + "}} {{crit1=[[" + crit1 + "]]}} {{crit2=[[" + crit2 + "]]}} @{saveflag} {{desc=@{atk_desc}}} @{hldmg} " + hldmgcrit + " {{spelllevel=@{spelllevel}}} {{innate=@{spell_innate}}} @{charname_output}"
                 update["repeating_attack_" + attackid + "_atkbonus"] = bonus;
                 update["repeating_attack_" + attackid + "_atkdmgtype"] = dmg + dmgspacer + dmg2 + dmgmag + " ";
                 update["repeating_attack_" + attackid + "_rollbase"] = rollbase;
