Redesign the Settings Page

--- a/Fate Core v2/fate.html
+++ b/Fate Core v2/fate.html
@@ -859,104 +859,115 @@
     
     <div class="sheet-tab-content sheet-tab4">
         <h1>Settings</h1>
-        <div class="sheet-section sheet-quarter">
+        <div class="sheet-section">
             <div class="sheet-header">
-                <span>Show First Time Hints</span>
+                <span>Display Options</span>
             </div>
-            <div>
-                <input type="checkbox" value="1" name="attr_show_hints_flag" checked="checked" />
-                <p><span>Show hints that might be useful for first time players or those upgrading from the previous sheet design.</span></p>
-            </div>
-        </div>
-        <div class="sheet-section sheet-quarter">
-            <div class="sheet-header">
-                <span>Show Phase 0 Tab</span>
-            </div>
-            <div>
-                <input type="checkbox" value="1" name="attr_show_phase0_flag" checked="checked" />
-                <p><span>If you are starting with a Phase 0, then you can use this tab to build up your ideas.</span></p>
-            </div>
-        </div>
-        <div class="sheet-section sheet-quarter">
-            <div class="sheet-header">
-                <span>Show Notes Tab</span>
-            </div>
-            <div>
-                <input type="checkbox" value="1" name="attr_show_notesTab_flag" />
-                <p><span>Set this if you would prefer the notes to show on a Tab of their own.</span></p>
-            </div>
-        </div>
-        <div class="sheet-section sheet-quarter">
-            <div class="sheet-header">
-                <span>Show Help Info on Rolls</span>
-            </div>
-            <div>
-                <input type="checkbox" value="{{showInfo=1}}" name="attr_rollTemplate_showInfo" checked="checked" />
-                <p><span>Show hints that might be useful for first time players on rolls.</span></p>
-            </div>
-        </div>
-        <div class="sheet-section sheet-quarter">
-            <div class="sheet-header">
-                <span>Show Character Name on Rolls</span>
-            </div>
-            <div>
-                <input type="checkbox" value="{{charname=@{character_name}}}" name="attr_rollTemplate_showCharName" checked="checked" />
-                <p><span>Show the Character's name on the Roll output. This is useful when rolling other character's Aspects.</span></p>
-            </div>
-        </div>
-        <div class="sheet-section sheet-quarter">
-            <div class="sheet-header">
-                <span>Run First Time Setup</span>
-            </div>
-            <div>
-                <input type="checkbox" value="1" name="attr_run_firstTime_setup" checked="checked" />
-                <p><span>Run scripts to setup the sheet for a default character.</span></p>
-            </div>
-        </div>
-        <div class="sheet-section sheet-quarter">
-            <div class="sheet-header">
-                <span>Default Stresses and Skills</span>
-            </div>
-            <div>
-                <input type="text" value="Physical:Physique,Mental:Will" name="attr_default_stressSkills" />
-                <p><span>When setting up a default sheet, what stress tracks and their guiding skill should be set up? e.g. "Mental:Will,Extra:3"</span></p>
-            </div>
-        </div>
-        <div class="sheet-section sheet-quarter">
-            <div class="sheet-header">
-                <span>Default Consequences</span>
-            </div>
-            <div>
-                <input type="text" value="2,4,6" name="attr_default_consequences" />
-                <p><span>When setting up a default sheet, what consequences are the default consequences? e.g. "2,4,6"</span></p>
-            </div>
-        </div>
-        <div class="sheet-section sheet-quarter">
-            <div class="sheet-header">
-                <span>Rollable Ladder</span>
-            </div>
-            <div>
-                <input type="checkbox" class="sheet-ladder-rollable" value="1" name="attr_ladder_rollable_flag" checked="checked" />
-                <p><span>Make the values on the Ladder rollable.</span></p>
-                <div class="sheet-ladder-rollable-true">
-                    <select name="attr_ladderRollLabel">
-                        <option value="&nbsp;" selected>Blank</option>
-                        <option value="?{Skill?}">Ask on roll</option>
-                    </select>
-                    <p><span>When rolling from the ladder, what header should be used?</span></p>
+            <div class="sheet-settings">
+                <div class="sheet-setting">
+                    <div class="sheet-header">
+                        <span>Show First Time Hints</span>
+                    </div>
+                    <div>
+                        <input type="checkbox" value="1" name="attr_show_hints_flag" checked="checked" />
+                        <p><span>Show hints that might be useful for first time players or those upgrading from the previous sheet design.</span></p>
+                    </div>
+                </div>
+                <div class="sheet-setting">
+                    <div class="sheet-header">
+                        <span>Show Phase 0 Tab</span>
+                    </div>
+                    <div>
+                        <input type="checkbox" value="1" name="attr_show_phase0_flag" checked="checked" />
+                        <p><span>If you are starting with a Phase 0, then you can use this tab to build up your ideas.</span></p>
+                    </div>
+                </div>
+                <div class="sheet-setting">
+                    <div class="sheet-header">
+                        <span>Show Notes Tab</span>
+                    </div>
+                    <div>
+                        <input type="checkbox" value="1" name="attr_show_notesTab_flag" />
+                        <p><span>Set this if you would prefer the notes to show on a Tab of their own.</span></p>
+                    </div>
+                </div>
+                <div class="sheet-setting">
+                    <div class="sheet-header">
+                        <span>Rollable Ladder</span>
+                    </div>
+                    <div>
+                        <input type="checkbox" class="sheet-ladder-rollable" value="1" name="attr_ladder_rollable_flag" checked="checked" />
+                        <p><span>Make the values on the Ladder rollable.</span></p>
+                        <div class="sheet-ladder-rollable-true">
+                            <select name="attr_ladderRollLabel">
+                                <option value="&nbsp;" selected>Blank</option>
+                                <option value="?{Skill?}">Ask on roll</option>
+                            </select>
+                            <p><span>When rolling from the ladder, what header should be used?</span></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <!--
-<div class="sheet-section sheet-quarter">
-<div class="sheet-header">
-    <span>Show First Time Hints</span>
-</div>
-<div>
-    <input type="checkbox" value="1" name="attr_show_hints_flag" checked="checked" />
-    <p><span>Show hints that might be useful for first time players or those upgrading from the previous sheet design.</span></p>
-</div>
-</div>-->
+        <div class="sheet-section">
+            <div class="sheet-header">
+                <span>Roll Options</span>
+            </div>
+            <div class="sheet-settings">
+                <div class="sheet-setting">
+                    <div class="sheet-header">
+                        <span>Show Help Info on Rolls</span>
+                    </div>
+                    <div>
+                        <input type="checkbox" value="{{showInfo=1}}" name="attr_rollTemplate_showInfo" checked="checked" />
+                        <p><span>Show hints that might be useful for first time players on rolls.</span></p>
+                    </div>
+                </div>
+                <div class="sheet-setting">
+                    <div class="sheet-header">
+                        <span>Show Character Name on Rolls</span>
+                    </div>
+                    <div>
+                        <input type="checkbox" value="{{charname=@{character_name}}}" name="attr_rollTemplate_showCharName" checked="checked" />
+                        <p><span>Show the Character's name on the Roll output. This is useful when rolling other character's Aspects.</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="sheet-section">
+            <div class="sheet-header">
+                <span>Game Defaults</span>
+            </div>
+            <div class="sheet-settings">
+                <div class="sheet-setting">
+                    <div class="sheet-header">
+                        <span>Run First Time Setup</span>
+                    </div>
+                    <div>
+                        <input type="checkbox" value="1" name="attr_run_firstTime_setup" checked="checked" />
+                        <p><span>Run scripts to setup the sheet for a default character.</span></p>
+                    </div>
+                </div>
+                <div class="sheet-setting">
+                    <div class="sheet-header">
+                        <span>Default Stresses and Skills</span>
+                    </div>
+                    <div>
+                        <input type="text" value="Physical:Physique,Mental:Will" name="attr_default_stressSkills" />
+                        <p><span>When setting up a default sheet, what stress tracks and their guiding skill should be set up? e.g. "Mental:Will,Extra:3"</span></p>
+                    </div>
+                </div>
+                <div class="sheet-setting">
+                    <div class="sheet-header">
+                        <span>Default Consequences</span>
+                    </div>
+                    <div>
+                        <input type="text" value="2,4,6" name="attr_default_consequences" />
+                        <p><span>When setting up a default sheet, what consequences are the default consequences? e.g. "2,4,6"</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
