--- a/NoReturn/NoReturn.html
+++ b/NoReturn/NoReturn.html
@@ -800,7 +800,7 @@
             <div class="sheet-item sheet-huge"><input type="text" name="attr_meleeweaponspecial" /></div>
           </div>
           <div class="sheet-row sheet-twice sheet-Makro_mw">
-            <textarea name="attr_meleeattack_makro">/me schlägt mit @{meleeweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{meleeweaponclass} + @{meleeweapontemp} - @{malusGesamt} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
+            <textarea name="attr_meleeattack_makro">/me schlägt mit @{meleeweaponname} zu und trifft mit [[1d6! + ((@{ge} - 1) + @{meleeweaponclass} + @{meleeweapontemp} - @{malusGesamt} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
             <textarea name="attr_meleedamage_makro">/me und macht [[1d6! + ((@{st} - 1) + ?{Modifier?|0})d6 + @{meleeweapondamage}]] Schaden</textarea>
           </div>
         </div>
