Added new effects template and added effect rolls to equipment

--- a/Mythras/Mythras.html
+++ b/Mythras/Mythras.html
@@ -6110,6 +6110,7 @@
                     <div>
                         <div class="equipment-row">
                             <div class="equipment-item header"><span data-i18n="item-u">Item</span></div>
+                            <div class="equipment-btn header"></div>
                             <div class="equipment-location header"><span data-i18n="location-u">Location</span></div>
                             <div class="equipment-number header"><span data-i18n="enc-u">ENC</span></div>
                             <div class="equipment-number header"><span data-i18n="quantity-short-u">Qty</span></div>
@@ -6117,6 +6118,7 @@
                         <fieldset class="repeating_equipment">
                             <div class="equipment-row rep-row">
                                 <div class="equipment-item header"><input type="text" class="full-width" name="attr_name"></div>
+                                <div class="equipment-btn header"><button type="roll" class="reduced-size info-btn full-width" name="roll_effect" value="@{macro}"></div>
                                 <div class="equipment-location header">
                                     <select class="full-width" name="attr_location">
                                         <option value="loadout" data-i18n="loadout-u" selected>Loadout</option>
@@ -6131,7 +6133,12 @@
                                 <div class="equipment-number header"><input type="number" class="full-width" name="attr_quantity" value="1"></div>
                             </div>  <input type="checkbox" class="details-toggle" name="attr_str_details"><span class="details-toggle"></span>
                             <div class="details">
-                                <div><input type="text" class="full-width" name="attr_description" ></div>
+                                <div><span data-i18n="traits-u">Traits</span>:</div>
+                                <div><textarea type="text" class="full-width equipment-traits" name="attr_traits"></textarea></div>
+                                <div><span data-i18n="description-u">Description</span>:</div>
+                                <div><textarea type="text" class="full-width equipment-description" name="attr_description"></textarea></div>
+                                <div><span data-i18n="macro-u">Macro</span>:</div>
+                                <div><textarea type="text" class="full-width equipment-macro" name="attr_macro">@{roll_display}&{template:effect} {{name=@{name}}} @{name_display} {{traits=@{traits}}} {{description=@{description}}}</textarea></div>
                             </div>
                         </fieldset>
                         <div><span class="bold" data-i18n="notes-u">Notes</span>:</div>
@@ -15792,6 +15799,22 @@
             <tr><td colspan="2" class="template_value">{{notes}}</td></tr>
         {{/notes}}
     </table>
+</rolltemplate>
+
+<!-- Effect Template -->
+<rolltemplate class="sheet-rolltemplate-effect">
+    <div class="header">{{name}}</div>
+    {{#character}}
+    <div class="subheader">({{character}})</div>
+    {{/character}}
+    <div class="content">
+      {{#traits}}
+      <div><span class="italics">{{traits}}</span></div>
+      {{/traits}}
+      {{#description}}
+      <div>{{description}}</div>
+      {{/description}}
+    </div>
 </rolltemplate>
 
 <!-- Magic Template -->
