Option added to hide the Fate Points section of the sheet for NPCs and Extras.
Settings now wrap.

--- a/Fate Core v2/fate.html
+++ b/Fate Core v2/fate.html
@@ -76,6 +76,7 @@
             <div class="sheet-header">
                 <span>ID</span>
             </div>
+            <input class="sheet-fatepoints-flag sheet-hidden" type="checkbox" name="attr_show_fatepoints_flag" value="1" checked />
             <div class="sheet-section sheet-section-id-info">
                 <div class="sheet-repitem">
                     <input type="text" name="attr_character_name" placeholder="Name" />
@@ -905,6 +906,15 @@
                             </select>
                             <p><span>When rolling from the ladder, what header should be used?</span></p>
                         </div>
+                    </div>
+                </div>
+                <div class="sheet-setting">
+                    <div class="sheet-header">
+                        <span>Show Fate Points</span>
+                    </div>
+                    <div>
+                        <input type="checkbox" value="1" name="attr_show_fatepoints_flag" checked="checked" />
+                        <p><span>NPCs and Extras don't usually have their own Fate Points so uncheck this to hide the Fate Points and Refresh boxes</span></p>
                     </div>
                 </div>
             </div>
