AiME sheet html bug fix
Removed the editable distinctive quality, speciality, hope and despair, to prevent loss of data.

--- a/Adventures in Middle Earth/Adventures in Middle Earth.html
+++ b/Adventures in Middle Earth/Adventures in Middle Earth.html
@@ -1665,45 +1665,21 @@
             </div>
         </div>
         <div class="col col3">
-            <div class="textbox pibf">
-                <input class="options-flag" type="checkbox" name="attr_options-flag-personality" checked="checked"><span>y</span>
-                <div class="options">
-                    <textarea name="attr_personality_traits" style="min-height: 50px; height: 50px;"></textarea>
-                </div>
-                <div class="display">
-                    <span name="attr_personality_traits"></span>
-                </div>
-                <span class="label" data-i18n="personality-traits-u">DISTINCTIVE QUALITY</span>
+            <div class="textbox">
+                <textarea name="attr_distinctive_quality" style="min-height: 50px; height: 50px;"></textarea>
+                <span class="label" data-i18n="distinctive-quality-u">DISTINCTIVE QUALITY</span>
             </div>
-            <div class="textbox pibf">
-                <input class="options-flag" type="checkbox" name="attr_options-flag-ideals" checked="checked"><span>y</span>
-                <div class="options">
-                    <textarea name="attr_ideals"></textarea>
-                </div>
-                <div class="display">
-                    <span name="attr_ideals"></span>
-                </div>
-                <span class="label" data-i18n="ideals-u">SPECIALTY</span>
+            <div class="textbox">
+                <textarea name="attr_specialty"></textarea>
+                <span class="label" data-i18n="specialty-u">SPECIALITY</span>
             </div>
-            <div class="textbox pibf">
-                <input class="options-flag" type="checkbox" name="attr_options-flag-bonds" checked="checked"><span>y</span>
-                <div class="options">
-                    <textarea name="attr_bonds"></textarea>
-                </div>
-                <div class="display">
-                    <span name="attr_bonds"></span>
-                </div>
-                <span class="label" data-i18n="bonds-u">HOPE</span>
+            <div class="textbox">
+                <textarea name="attr_hope"></textarea>
+                <span class="label" data-i18n="hope-u">HOPE</span>
             </div>
-            <div class="textbox pibf">
-                <input class="options-flag" type="checkbox" name="attr_options-flag-flaws" checked="checked"><span>y</span>
-                <div class="options">
-                    <textarea name="attr_flaws" style="min-height: 46px; height: 46px;"></textarea>
-                </div>
-                <div class="display">
-                    <span name="attr_flaws"></span>
-                </div>
-                <span class="label" data-i18n="flaws-u">DESPAIR</span>
+            <div class="textbox">
+                <textarea name="attr_dispair" style="min-height: 46px; height: 46px;"></textarea>
+                <span class="label" data-i18n="dispair-u">DESPAIR</span>
             </div>
            <div class="resources">
                 <div class="hdice-dsaves-container" style="width: 246px; margin-top: 10px;">
