label corrected for fully automatic

--- a/NoReturn/NoReturn.html
+++ b/NoReturn/NoReturn.html
@@ -839,7 +839,7 @@
 			</div>
             <div class="sheet-item sheet-small">
               <button type="roll" name="roll_rangeattack_v" value="@{rangeattack_makro_v}">
-                <label>V</label>
+                <label>A</label>
               </button>
 			</div>
           </div>
