--- a/Adventures in Middle Earth/Adventures in Middle Earth.html
+++ b/Adventures in Middle Earth/Adventures in Middle Earth.html
@@ -1590,16 +1590,16 @@
             <div class="equipment">
                 <div class="money">
                     <div class="coin">
-                        <span class="label" data-i18n="copper-piece-u">C</span>
-                        <input type="text" name="attr_cp" title="@{cp}">
+                        <span class="label" data-i18n="gold-u">G</span>
+                        <input type="text" name="attr_gold" title="@{gold}" value="0">
                     </div>
                     <div class="coin">
-                        <span class="label" data-i18n="silver-piece-u">S</span>
-                        <input type="text" name="attr_sp" title="@{sp}">
+                        <span class="label" data-i18n="silver-u">S</span>
+                        <input type="text" name="attr_silver" title="@{silver}" value="0">
                     </div>
                     <div class="coin">
-                        <span class="label" data-i18n="gold-piece-u">G</span>
-                        <input type="text" name="attr_gp" title="@{gp}">
+                        <span class="label" data-i18n="copper-u">C</span>
+                        <input type="text" name="attr_copper" title="@{copper}" value="0">
                     </div>
                 </div>
                 <input type="hidden" class="inventoryflag" name="attr_simpleinventory" value="complex">
@@ -1822,8 +1822,8 @@
     <div class="body">
         <div class="col col1">
             <div class="textbox">
-                <textarea name="attr_character_appearance" style="min-height: 300px; height: 300px;"></textarea>
-                <span class="label" data-i18n="char-appearance-u">PATRONS & SANCTUARIES</span>
+                <textarea name="attr_patrons_and_sanctuaries" style="min-height: 300px; height: 300px;"></textarea>
+                <span class="label" data-i18n="patrons-sanctuaries-u">PATRONS & SANCTUARIES</span>
             </div>
             <div class="textbox">
                 <textarea name="attr_character_backstory" style="min-height: 623px; height: 623px;"></textarea>
@@ -1832,8 +1832,8 @@
         </div>
         <div class="col2-3">
             <div class="textbox">
-                <textarea name="attr_allies_and_organizations" style="min-height: 288px; height: 300px;"></textarea>
-                <span class="label" data-i18n="allies-orgs-u">TALE OF YEARS</span>
+                <textarea name="attr_tale_of_years" style="min-height: 288px; height: 300px;"></textarea>
+                <span class="label" data-i18n="tale-of-years-u">TALE OF YEARS</span>
             </div>
             <div class="textbox">
                 <textarea name="attr_additional_feature_and_traits" style="min-height: 289px; height: 300px;"></textarea>
